# python_startkit

./: .flake8  .pylintrc  README.md  pyproject.toml  test.sh
.github/workflows/: app-server.yml
python_startkit/: __init__.py  __main__.py  index.py  model.py  palindrome.py
python_startkit/schema/: index.py
tests/: test_palindrome.py  test_python_startkit.py
